[gd_scene load_steps=9 format=3 uid="uid://b5ue1dlnj2imi"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_jfbmb"]
[ext_resource type="Texture2D" uid="uid://c8tu1uosgtkw6" path="res://assets/PNG/UI/UIbg.png" id="1_nm8mi"]
[ext_resource type="FontFile" uid="uid://ksyqamxi4bd4" path="res://assets/Font/kenvector_future.ttf" id="2_su44o"]
[ext_resource type="Texture2D" uid="uid://ucwpk70pk763" path="res://assets/PNG/UI/buttonSmall.png" id="3_ndoth"]
[ext_resource type="PackedScene" uid="uid://ws83212d6hp8" path="res://scenes/time_label.tscn" id="5_iwicd"]

[sub_resource type="LabelSettings" id="LabelSettings_fhhjq"]
font = ExtResource("2_su44o")
font_size = 36
outline_size = 5
outline_color = Color(0.0156863, 0.0156863, 0.0156863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mu0v4"]
font = ExtResource("2_su44o")
font_size = 36
outline_size = 5
outline_color = Color(0.0117647, 0.0117647, 0.0117647, 1)
shadow_color = Color(0.00392157, 0.00392157, 0.00392157, 0)

[sub_resource type="LabelSettings" id="LabelSettings_p0gdc"]
font = ExtResource("2_su44o")
font_size = 26

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jfbmb")

[node name="TopBarBG" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TopBar" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreBox" type="TextureRect" parent="TopBar"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 88.0
texture = ExtResource("1_nm8mi")
expand_mode = 1

[node name="LevelLabel" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 43.0
offset_top = 25.0
offset_right = 230.0
offset_bottom = 66.0
text = "LEVEL: 1"
label_settings = SubResource("LabelSettings_fhhjq")

[node name="ScoreLabel" type="Label" parent="TopBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 292.0
offset_top = 6.0
offset_right = 566.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
text = "Score: 00"
label_settings = SubResource("LabelSettings_mu0v4")

[node name="PauseButton" type="TextureButton" parent="TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 961.0
offset_top = -16.0
offset_right = 1097.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("3_ndoth")

[node name="Label" type="Label" parent="TopBar/PauseButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -15.0
offset_right = 55.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "PAUSE"
label_settings = SubResource("LabelSettings_p0gdc")

[node name="TimeLabel" parent="TopBar" instance=ExtResource("5_iwicd")]
layout_mode = 0
offset_left = 660.0
offset_top = 25.0
offset_right = 864.0
offset_bottom = 66.0

[connection signal="pressed" from="TopBar/PauseButton" to="." method="_on_pause_button_pressed"]
